--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,7 +5,7 @@
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
           <li style="display:none;" class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
-            <a href="https://https:/posuoshu.github.io/" target="_self">
+            <a href="https://posuoshu.github.io/" target="_self">
               <img class="svg" src="/images/en.svg" width="20pt"> 
               English
             </a>
