--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,8 +4,8 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
-            <a href="/en/" target="_self">
+          <li style="display:none;" class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
+            <a href="https://posuoshu.github.io/" target="_self">
               <img class="svg" src="/images/en.svg" width="20pt"> 
               English
             </a>
